# whispr-clone

./: .gitignore  ACCURACY_RESULTS.md  CMakeLists.txt  RALPH_WIGGUM_ACCURACY.md  RALPH_WIGGUM_ACCURACY_V2.md  RALPH_WIGGUM_PLAN.md  RALPH_WIGGUM_TEXT_FORMATTING.md  RALPH_WIGGUM_VOXTYPE.md  README.md  build.sh  install.sh
.claude/: ralph-loop.local.md
include/: app.hpp  audio_capture.hpp  audio_processor.hpp  clipboard.hpp  config.hpp  hotkey_manager.hpp  text_processor.hpp  transcriber.hpp  vocabulary.hpp
macos/: Info.plist
scripts/: create-app-bundle.sh  download_models.sh
src/: app.cpp  audio_capture.cpp  audio_processor.cpp  clipboard.cpp  hotkey_manager.cpp  main.cpp  text_processor.cpp  transcriber.cpp  vocabulary.cpp
src/platform/linux/: clipboard_linux.cpp  hotkey_linux.cpp  tray_linux.cpp
src/platform/macos/: clipboard_macos.mm  hotkey_macos.mm  tray_macos.mm
tests/: debug_text  debug_text.cpp  manual_test.sh  run_tests.sh  test_audio_processor.cpp  test_phase6  test_text_processor.cpp  test_text_processor_phase6.cpp
